--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-errors": "^1.7.1",
     "mongoose": "^5.4.7",
     "morgan": "^1.9.1",
+    "node-sass": "^4.14.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "rxjs": "~6.3.3",
